--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap");
 
 :root {
   --primary-color: #f60f20;
@@ -14,7 +14,7 @@
 
 html,
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   color: #111;
 }
 
@@ -118,6 +118,13 @@ section.home {
 }
 
 .navigation ul li a {
+  font-size: 2.2rem;
+  color: #111;
+  text-decoration: none;
+  font-weight: 300;
+}
+
+.navigation-link {
   font-size: 2.2rem;
   color: #111;
   text-decoration: none;
@@ -293,7 +300,7 @@ section.home {
   height: 150px;
 }
 
-.contact-form .row input[type='submit'] {
+.contact-form .row input[type="submit"] {
   background-color: var(--secondary-color);
   color: #fff;
   margin: 0;
